@@ -1526,6 +1526,7 @@ David Smith <dts@prismtechnologies.com>
 Dimitrije Jankovic <djankov99@yahoo.com>
 Frank O. Flemisch <f.o.flemisch@larc.nasa.gov>
 Ken Sedgwick <ken@bonsai.com>
+Cary Steinmetz <cary.s.steinmetz@boeing.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
